[tool.poetry]
name = "agents"
version = "0.1.0"
description = ""
authors = ["leonjmroe <leonjmroe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
mistune = "^3.1.1"
langchain = "^0.3.17"
langchain-community = "^0.3.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
